# discord-bot-for-plex

./: .env.example  .gitignore  Cargo.toml  LICENSE
.claude/: settings.local.json
src/: config.rs  discord.rs  embeds.rs  main.rs  plex.rs
